contrucao da api teste

--- a/api_messagem/templates/home.html
+++ b/api_messagem/templates/home.html
@@ -7,6 +7,6 @@
     <title>Teste api facebook</title>
 </head>
 <body>
-    <p>Teste Api facebook messagem</p>
+    <p>Teste Api facebook messagem teste</p>
 </body>
 </html>
